base/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etherbank-api-deployment
  namespace: etherbank-api-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etherbank-api
  template:
    metadata:
      labels:
        app: etherbank-api
    spec:
      containers:    
        - image: seyio/etherbank-api:latest
          name: api-server
          ports:
            - containerPort: 5000
