base/redis-deployment.yml
apiVersion: v1
kind: Service
metadata:
  namespace: etherbank-api-dev
  name: ether-cache-service
spec:
  ports: 
    - port: 6379
  selector:
    app: etherbank-cache

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: etherbank-cache-deployment
  namespace: etherbank-api-dev
spec:
  selector:
    matchLabels:
      app: etherbank-cache
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: etherbank-cache
    spec:
      containers:
        - image: redis
          name: etherbank-cache
          ports:
            - containerPort: 6379
