base/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: etherbank-api-ingress
  namespace: etherbank-api-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: oneblock.ddns.net
    http:
      paths:
      - backend:
          serviceName: etherbank-api-service
          servicePort: 80
